--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "@types/react-scroll": "^1.8.3",
     "react": "^18.1.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.1.0",
+    "react-dotenv": "^0.1.3",
+    "react-intl": "^6.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-tsparticles": "^1.37.5",
     "sass": "^1.52.1",
     "typescript": "^4.6.4"
@@ -28,8 +32,9 @@
     "@types/react-animate-on-scroll": "^2.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "serve": "react-dotenv && serve build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "react-dotenv": {
+    "whitelist": ["TEL", "EMAIL"]
   }
 }
