--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,5 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install
+      - run: npm install -g yarn
+      - run: yarn install
       - run: npm test
